--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://solc-bin.ethereum.org/bin/list.js"></script>
+    <xxscript src="https://solc-bin.ethereum.org/bin/soljson-v0.5.7+commit.6da8b019.js"></script> 
   </head>
   <body>
     <noscript>
