--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://solc-bin.ethereum.org/bin/list.js"></script>
-    <xxscript src="https://solc-bin.ethereum.org/bin/soljson-v0.5.7+commit.6da8b019.js"></script> 
+    <xscript src="https://solc-bin.ethereum.org/bin/soljson-v0.5.7+commit.6da8b019.js"></script> 
   </head>
   <body>
     <noscript>
